--- a/assets/scss/layouts/_l-sections.scss
+++ b/assets/scss/layouts/_l-sections.scss
@@ -28,6 +28,6 @@
 /* up to small */
 @media only screen and (max-width: 39.9375em) {
   .c-section {
-    padding: 20px 0;
+    padding: 20px 5px;
   }
 }
